Mejoras generales de UX, ajustes de PDF y Reserva de Salas
- UX: Scroll automático suave al inicio al editar o crear libros.
- Corrección: Ajustado nombre de la clave del token JWT de 'token' a 'sp_token' en el servicio de libros, arreglando la subida de PDFs.
- Funcionalidad: Implementado filtrado dinámico de horarios en el formulario de reservación de salas. Ahora los horarios ya ocupados desaparecen de la selección.
- UI: Añadidas etiquetas de formato (Físico, Digital, Ambos) con iconos y colores distintivos en el catálogo y gestión de libros.
- Notificaciones: Reemplazadas alertas nativas por SweetAlert2 en el componente de configuración para mayor consistencia visual.